DFR-1768-Refactor